--- a/arduino-client/package.json
+++ b/arduino-client/package.json
@@ -12,9 +12,11 @@
     "@fullcalendar/timegrid": "^5.11.3",
     "@loadable/component": "^5.15.2",
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1356.0",
     "axios": "^1.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^8.0.2",
