--- a/arduino-client/package.json
+++ b/arduino-client/package.json
@@ -49,6 +49,7 @@
 		"react-sparklines": "^1.7.0",
 		"react-table": "^7.8.0",
 		"react-time-picker": "^5.1.0",
+		"react-to-print": "^2.14.12",
 		"react-toastify": "^9.1.1",
 		"recharts": "^2.1.16",
 		"redux": "^4.2.0",
